fix(line-progress): fix progress bar z-index

--- a/packages/components/ng-ui-router-line-progress/src/ng-ui-router-line-progress.less
+++ b/packages/components/ng-ui-router-line-progress/src/ng-ui-router-line-progress.less
@@ -7,7 +7,7 @@
   .bar {
     background: @nprogress-background-color;
     position: fixed;
-    z-index: 1031;
+    z-index: 10000;
     top: 0;
     left: 0;
     width: 100%;
